<resources>
    <string name="app_name">MyCA</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="news">News</string>
    <string name="history">History</string>
    <string name="h2o_world">SPAM!</string>
    <string name="switch_assoc">Switch Association</string>
    <string name="about">About</string>
    <string name="drawer_submenu_title">MORE</string>
    <string name="title_activity_content_browser">ContentBrowserActivity</string>
    <string name="network_error">Error loading</string>
    <string name="push_settings">Push Settings</string>
    <string name="enable_push">Enable Push</string>
    <string name="enable_push_sound">Ring</string>
    <string name="enable_push_vibrate">Vibration</string>
    <string name="summary_push_off">Push services are completely disabled now</string>
    <string name="summary_push_on">Do you like me? Yes~ Thank you very much.</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
</resources>
